--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -45,20 +45,22 @@
 								<div ng-repeat="lottery in activeLeague.lotteries" class="panel panel-default">
 									<div class="panel-heading" role="tab" id="collapseListGroupHeading1">
 										<h5 class="panel-title">
-											<button class="btn btn primary" data-target="#collapseListGroup1" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapseListGroup1" ng-click="sortTicketsByPerson()"><i class="fa fa-ticket"></i> &nbsp; 
+											<button class="btn btn primary" data-target="{{'#collapseListGroup-' + lottery.id}}" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="{{'collapseListGroup-' + lottery.id}}" ng-click="sortTicketsByPerson(lottery.id)"><i class="fa fa-ticket"></i> &nbsp; 
 												Lottery ID: {{lottery.id}}, league ID: {{lottery.league_id}}, balance: {{lottery.balance}}, payout: {{lottery.payout}}
 											</button>
 										</h5>
 									</div>
-									<div id="collapseListGroup1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading1">
+									<div id="{{'collapseListGroup-' + lottery.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="{{'collapseListGroupHeading-' + lottery.id}}">
 										<ul class="list-group">
  											<li class="list-group-item" ng-repeat="ticketHolder in lottery.ticketHolders"><i class="fa fa-ticket"></i> &nbsp;
  												Name: {{ticketHolder.name}}, NumTickets: {{ticketHolder.numTickets}}, ID: {{ticketHolder.bowlerID}}
 											</li>
-
  										</ul>
 									</div>
 								</div>
+							</div>
+
+							<!-- <div class="panel-grou" -->
 								<div class="panel panel-default">
 									<div class="panel-heading" role="tab" id="collapseListGroupHeading1">
 										<h5 class="panel-title">
@@ -67,8 +69,6 @@
 											</button>
 										</h5>
 									</div>
-
-								</div>
 							</div>
 
 
