--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -116,7 +116,7 @@
 							<div class="row" ng-switch-when="2">
 								<div class="col-lg-8 col-lg-offset-2">
 
-								{{getBowlerName(winningTicket.bowler_id)}} has won {{winningTicket.payout}}!!
+								{{getBowlerName(winningTicket.bowler_id)}} has won {{winningTicket.payout | currency}}!!
 
  								</div>
 							</div>
