minor edits, css removals

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>Login Page</title>
+		<title>The Bowling App</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-route.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-resource.js"></script>
@@ -36,8 +36,6 @@
 
 	<body>
 
-		<!-- Static navbar -->
-		<!-- <div style="position: absolute; left: 0px; top: 0px; display: none; background: gold; padding: 0.3em; font-weight: bold;" id="loading">LOADING!!!</div> -->
 		<div ng-include="'pages/navbar.html'"></div>
 
 		<div ng-view></div>
